# small_code_analyser

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/inc/: AnalyserData.h  CodeAnalyser.h  CountLines.h  json_saver.h  process_files.h  read_files.h
src/src/: AnalyserData.cpp  CodeAnalyser.cpp  CountLines.cpp  json_saver.cpp  process_files.cpp  read_files.cpp
tst/: CMakeLists.txt
tst/test_samples/test_sample_2/: file2.h
tst/test_samples/test_sample_2/dir1/: file2.h
tst/tests/: basic_tests.cpp  empty_analyser_tests.cpp  nested_folders_tests.cpp  simple_analyse.cpp
